# NovaBank-AI-Core

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  nginx.conf  pyproject.toml
chroma_db_faq/: chroma.sqlite3
data/: faq.py
functions_src/: faq_engine.py  rag_pipeline.py  security.py
