[project]
name = "fastapi-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.7",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-cohere>=0.6.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "uvicorn>=0.49.0",
]
